[package]
name = "keytones"
version = "0.2.0"
edition = "2024"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies.microcheby]
version = "0.1.1"
default-features = false

[build-dependencies]
microcheby = "0.1.1"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[features]
default = ["std"]
std = ["num-traits/std", "microcheby/std"]
